devel
-----

* In rare cases SmartBFS could use a wrong index for looking up edges. This is fixed now.

* The internally used JS-based ClusterComm send request function can now again use JSON, and does
  not require VelocyPack anymore. This fixes an issue with Foxx-App management (install, updated, remove)
  got delayed in a sharded environment, all servers do get all apps eventually, now the fast-path
  will work again.

* Fixed a rare race in Agents, if the leader is rebooted quickly there is a chance
  that it is still assumed to be the leader, but delivers a state shortly in the
  past.

* Fixed a race in the ConnectionPool which could lease out a connection
  that got its idle timeout after the lease was completed. This could lead
  to sporadic network failures in TLS and to inefficiencies with TCP.

* Fixed restoring a SmartGraph into a database that already contains that same graph.
  The use case is restoring a SmartGraph from backup, apply some modifications, which are
  undesired, and then resetting it to the restored state, without dropping the database.
  One way to achieve this is to use arangorestore with the `overwrite` option on the same dataset, 
  effectively resetting the SmartGraph to the original state.
  Without this fix, the workaround for is to either drop the graph (or the database) before the
  restore call, yielding an identical result.
  
* Keep the list of last-acknowledged entires in Agency more consistent.
  During leadership take-over it was possible to get into a situation that
  the new leader does not successfully report the agency config, which
  was eventually fixed by the Agent itself. Now this situation is impossible.

* Allow changing collection properties for smart edge collections as well. 

* Fixed that the hotbackup agency lock is released under all circumstances
  using scope guards. This addresses a rare case in which the lock was left
  behind.

* Privatized load plan / current in cluster info and cleanup following