@@ -67,14 +67,8 @@ auto FilterExecutor::skipRowsRange(AqlItemBlockInputRange& inputRange, AqlCall& 
     }
   }
 
+  // Just fetch everything from above, allow overfetching
   AqlCall upstreamCall{};
-  if (call.needSkipMore() && call.getLimit() == 0) {
-    // FullCount case, we need to skip more, but limit is reached.
-    upstreamCall.softLimit = ExecutionBlock::SkipAllSize();
-  } else {
-    upstreamCall.softLimit = call.getOffset();
-  }
-
   return {inputRange.upstreamState(), stats, call.getSkipCount(), upstreamCall};
 }
 
@@ -96,12 +90,8 @@ auto FilterExecutor::produceRows(AqlItemBlockInputRange& inputRange, OutputAqlIt
     }
   }
 
+  // Just fetch everything from above, allow overfetching
   AqlCall upstreamCall{};
-  auto const& clientCall = output.getClientCall();
-  // This is a optimistic fetch. We do not do any overfetching here, only if we
-  // pass through all rows this fetch is correct, otherwise we have too few rows.
-  upstreamCall.softLimit = clientCall.getOffset() +
-                           (std::min)(clientCall.softLimit, clientCall.hardLimit);
   return {inputRange.upstreamState(), stats, upstreamCall};
 }
 
